# donezo

./: README.md  donezo.py  pyproject.toml
app/: __init__.py  db.py  main.py
app/templates/: 404.html  base.html  index.html
